test/error/circularrequire2.luau
require "./dir1/circular"
